# Kinect-Mouse

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Kinect-Mouse.code-workspace  Makefile  README  cmake_install.cmake  docker-compose.yml  kinect_mouse_mm.c  kinect_touch.cpp  kmouse  onlydebug.sh  onlyjson.sh
.devcontainer/: devcontainer.json
cmake/: Findfreenect.cmake
